--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 teraform-labs-flazouac/*/.terraform*
 API/__pycache__/*
 **.tfstate*
+terraform/.terraform.lock.hcl
+terraform/.terraform/environment
+terraform/.terraform/providers/registry.terraform.io/hashicorp/aws/5.35.0/linux_amd64/terraform-provider-aws_v5.35.0_x5
+terraform/.terraform*
